마크다운 문법 문서 수정

--- a/_posts/2021-08-24.second.md
+++ b/_posts/2021-08-24.second.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "마크다운 문법"
+title: "마크다운 문법입니다."
 ---
 
 
@@ -105,3 +105,4 @@ function hello(){
 [참고 블로그1] https://theorydb.github.io/envops/2019/05/22/envops-blog-how-to-use-md/
 <br>
 [참고 블로그2]https://tutorialpost.apptilus.com/code/posts/tools/markdown01-syntax/
+
